[package]
name = "texture_stacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.5"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
# gui_frontend
eframe = "0.18.0"
nfd2 = "0.3.1"

[[bin]]
name = "texture_stacker"
path = "src/console_frontend/main.rs"

[[bin]]
name = "texture_stacker_gui"
path = "src/gui_frontend/main.rs"
